Live templates update. Updating context display/change interface for live template (change button now displayed under context like in current JB version). Moving Java-related live template descriptions to Java plugin. Some localization and refactoring.